package PatronesTDP;

public class ExternalReservationSystem {
    public void bookTable(int tableId) {
        System.out.println("Reservando mesa " + tableId + " en el sistema externo...");
    }
}