package PatronesTDP;

public interface ReservationSystem {
    void reserveTable(int tableId);
}
