package PatronesTDP;

public interface Restaurant {
    void serveCustomers();

    void setServiceStrategy(ServiceStrategy strategy);
}