package org.example;
// Las clases extendidas por esta interfaz son las que forman parte del Patron Strategy de la entrega 4
public interface ServiceStrategy {
    void serve();
}